--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,1 +1,10 @@
+.column
+  .group
+    .title Stylesheets
+    %a{href: '#'} Forms
+    %a{href: '#'} Buttons
+    %a{href: '#'} Tables
+    %a{href: '#'} Images
+  .group
+    .title Compontents
 page
