button stuff and things

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,1 +1,9 @@
-page
+.button
+  Button
+%a.button
+  Anchor
+%button.button{type: 'button'}
+  Button
+%input.button{type: 'submit', value: 'Input Submit'}
+  
+
