spelling mistake, content padding

--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -95,6 +95,10 @@ $base-line-height     : 20px
 $side-gutter-width    : 0px
 
 
+.content
+  :padding
+    :left 200px
+
 .column
   :background rgb(240,240,240)
   :width 200px
