--- a/source/stylesheets/monsterstyle/theme/variables.sass
+++ b/source/stylesheets/monsterstyle/theme/variables.sass
@@ -16,8 +16,8 @@ $font_family_monospace  : Menlo, Monaco, Consolas, "Courier New", monospace
 $font_family_base       : $font_family_sans_serif
 
 $button_font_weight         : normal
-$button_font_size           : ms(1)
-$button_font_padding        : ms(-1)
+$button_font_size           : ms(0)
+$button_padding             : ms(-1)
 
 $button_default_color       : #333
 $button_default_bg          : #fff
