--- a/source/stylesheets/monsterstyle/theme/default.sass
+++ b/source/stylesheets/monsterstyle/theme/default.sass
@@ -1,74 +1,44 @@
-//*
+*
   +box-sizing(border-box)
   :margin 0px
 
-//=bg_grid
-  +grid-background($total-columns, convert-length($column-width,'px'), convert-length($gutter-width,'px'), $base-line-height, $side-gutter-width, $force_fluid: true)
+html
+  width: 100%
+  height: 100%
+  margin: 0px
+  padding: 0px
+  background: rgb(255, 255, 255)
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video
-  :margin 0px
-  :padding 0px
-  :border 0
-  :font-size 100%
-  :font inherit
-  :vertical-align baseline
-  :outline none
-  :font-family 'Open Sans' Helvetica, Arial, sans-serif
-html, body
-  :height 100%
-  :background $color_background
-  :font-size ms(1)
+body
+  width: 100%
+  height: 100%
+  margin: 0px
+  padding: 0px
+  background: rgb(255, 255, 255)
+  font: normal 14px 'Open Sans', sans-serif
 
-body.logged_out
-  .container
-    :margin 0px auto
-    :width 960px
-.wrapper
-  :padding
-    :top 37px
-  .content
-    +container
-    //+susy-grid-background
+h1, h2, h3, h4
+  font-family: 'Open Sans', Helvetica, Arial
+  font-size: 15px
+  margin: 0px
 
-.clear
-  :clear both
+p
+  margin: 10px 0px
+  line-height: 1.3em
 
-.not_ready
-  :display none
+a
+  color: rgb(0, 0, 255)
+  text-decoration: none
+  &:hover
+    text-decoration: underline
 
-table.listing
-  :border-collapse collapse
-  :width 100%
-  .actions
-    :white-space nowrap
-    a
-      :white-space nowrap
-      :padding 0 0.5rem
-    :width 1%
-    .fa
-      :cursor pointer
-  thead
-    th
-      :color #545454
-      :font-weight 700
-      :border
-        :bottom solid 2px #eeeeee
-      :white-space nowrap
-      :background rgb(255,255,255)
-      :font-size 0.9rem
-      :text-align left
-      :padding 1rem 0.5rem
-  .counts
-    :width 1%
-  tr.item
-    td
-      :color #707a86
-      :background #fcfcfc
-      :font-size 0.8rem
-      :padding 0.8rem 0.5rem
-      :border
-        :bottom solid 1px #eeeeee
-  tr.item:hover
-    td
-      :background #f5f5f5
+img
+  display: block
+  border: 0px
+
+br
+  clear: both
+
+h2
+  font-size: 20px
 
