--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -29,5 +29,7 @@
       :color rgb(0,0,0)
       :background rgb(230,230,250)
 
-.button
+.button, a.button
   +button($color_primary)
+input
+  :margin 0
