--- a/source/stylesheets/monsterstyle/components/buttons.sass
+++ b/source/stylesheets/monsterstyle/components/buttons.sass
@@ -2,12 +2,14 @@
   :cursor pointer
   :display inline-block
   :background-color $color_theme
-  :color contrast-color($color_theme, $color_text, invert($color_text), 80%)
+  :color contrast-color($color_theme, $color_text, invert($color_text), 10%)
   :text-decoration none
   :text-align center
   :font-weight $button_font_weight
   :border none
   :outline none
+  :margin 0
+  :line-height $button_font_size
   +border-radius(3px)
   :font-size $button_font_size
   :padding $button_padding
