--- a/source/stylesheets/monsterstyle/components/buttons.sass
+++ b/source/stylesheets/monsterstyle/components/buttons.sass
@@ -13,6 +13,7 @@
   +border-radius(3px)
   :font-size $button_font_size
   :padding $button_padding
+  :vertical-align middle
   &:hover
     :text-decoration none
     :background-color lighten($color_theme, 20%)
