--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -29,6 +29,6 @@
       :color rgb(0,0,0)
       :background rgb(230,230,250)
 .button, a.button
-  +button($color_primary)
+  +button($color_info)
 input
   :margin 0
