--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -7,6 +7,7 @@
 @import compass/css3/box-sizing
 @import compass/css3/images
 @import compass/css3/opacity
+@import compass/utilities/color/contrast
 
 @import monsterstyle/theme/variables
 @import monsterstyle/theme/default
