--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -14,3 +14,9 @@
 %button.button{type: 'button'}
   Button
 %input.button{type: 'submit', value: 'Input Submit'}
+%span
+  
+  .primary
+    Primary Color
+  .complimentary
+    Complimentary Color
