--- a/source/stylesheets/monsterstyle/theme/variables.sass
+++ b/source/stylesheets/monsterstyle/theme/variables.sass
@@ -6,13 +6,14 @@ $color_danger     : #d9534f
 $color_disabled   : rgb(200, 200, 200)
 $color_background : rgb(255, 255, 255)
 $color_text       : rgb(0, 0, 0)
+$color_comp       : adjust-hue($color_primary, 180%)
 
 $ms-base: 16px
 $ms-ratio: $golden
 
-$font_family_sans_serif : "Helvetica Neue", Helvetica, Arial, sans_serif
+$font_family_sans_serif : 'Open Sans', Helvetica, Arial, sans-serif
 $font_family_serif      : Georgia, "Times New Roman", Times, serif
-$font_family_monospace  : Menlo, Monaco, Consolas, "Courier New", monospace
+$font_family_monospace  : Monaco, "Courier New", monospace
 $font_family_base       : $font_family_sans_serif
 
 $button_font_weight         : normal
