move help bar to the right

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -13,5 +13,11 @@
     %a{href: '#'} Images
   .group
     .title Complex Components
+    %a{href: '/basic_components/dropdowns.html'} Dropdowns
+    %a{href: '/basic_components/dropdowns.html'} Button groups
+    %a{href: '/basic_components/dropdowns.html'} Button dropdowns
+    %a{href: '/basic_components/dropdowns.html'} Input groups
+    %a{href: '/basic_components/dropdowns.html'} Navs
+    %a{href: '/basic_components/dropdowns.html'} Panels
   .group
     .title Examples
