--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -4,7 +4,7 @@
   clear: both
 
 .content
-  :padding
+  :right
     :left 200px
 
 .column
@@ -12,7 +12,7 @@
   :width 200px
   :position fixed
   :top 0
-  :left 0
+  :right 0
   :height 100%
   .group .title
     :font-weight 700
