right hand column for all pages

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -15,6 +15,7 @@
       .wrapper
         .content
           = yield
+          = partial 'column'
           .clear
     <script src="//codeorigin.jquery.com/jquery-2.0.3.min.js"></script>
     <script src="//codeorigin.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
