--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -16,18 +16,20 @@
   :height 100%
   .group .title
     :font-weight 700
-    :padding 0.4rem 1rem
-    :background rgb(230,230,230)
-    :border
-      :bottom solid 1px rgb(210,210,210)
+    :padding 0.8rem 1rem
+      :bottom 0rem
   a
     :display block
     :color rgb(100,100,100)
-    :padding 0.6rem 1rem
+    :padding 0.3rem 1rem
+    :margin 0.2rem 0rem
     &:hover
       :text-decoration none
       :color rgb(0,0,0)
-      :background rgb(230,230,250)
+      :background rgb(220,220,220)
+    &.active
+      :border
+        :left solid 5px rgb(0,0,0)
 .button, a.button
   +button($color_info)
 input
