--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -3,9 +3,23 @@
 .clear
   clear: both
 
-.content
-  :right
-    :left 200px
+.content_wrap
+  :padding
+    :right 200px
+  .content
+    :margin 0 3rem
+
+.page_heading
+  :padding 2rem 0
+    :bottom 1.6rem
+  :margin 1rem 0
+  :text-align center
+  :border
+    :bottom solid 1px rgb(230,230,230)
+  .page_title
+    :font-weight 300
+    :font-size 2.8rem
+    :color rgb(100,100,100)
 
 .column
   :background rgb(240,240,240)
