all pages with active column link

--- a/source/_column.html.haml
+++ b/source/_column.html.haml
@@ -1,23 +1,23 @@
 .column
   .group
     .title Getting Started
-    %a.active{href: '#'} Yee
+    %a{href: '#'} Yee
   .group
     .title Configuration
-    %a{href: '/configuration/variables/'} Variables
+    %a.variables{href: '/configuration/variables/'} Variables
   .group
     .title Basic Components
-    %a{href: '/basic_components/forms/'}   Forms
-    %a{href: '/basic_components/buttons/'} Buttons
-    %a{href: '/basic_components/tables/'}  Tables
-    %a{href: '#'} Images
+    %a.forms{href: '/basic_components/forms/'}   Forms
+    %a.buttons{href: '/basic_components/buttons/'} Buttons
+    %a.tables{href: '/basic_components/tables/'}  Tables
+    %a.images{href: '/basic_components/images/'} Images
   .group
     .title Complex Components
-    %a{href: '/basic_components/dropdowns/'} Dropdowns
-    %a{href: '/basic_components/dropdowns/'} Button groups
-    %a{href: '/basic_components/dropdowns/'} Button dropdowns
-    %a{href: '/basic_components/dropdowns/'} Input groups
-    %a{href: '/basic_components/dropdowns/'} Navs
-    %a{href: '/basic_components/dropdowns/'} Panels
+    %a.dropdowns{href: '/complex_components/dropdowns/'} Dropdowns
+    %a.button_groups{href: '/complex_components/button_groups/'} Button groups
+    %a.button_dropdowns{href: '/complex_components/button_dropdowns/'} Button dropdowns
+    %a.input_groups{href: '/complex_components/input_groups/'} Input groups
+    %a.navs{href: '/complex_components/navs/'} Navs
+    %a.panels{href: '/complex_components/panels/'} Panels
   .group
     .title Examples
