--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -48,7 +48,5 @@
   +button($color_info)
 input
   :margin 0
-.primary
-  :background $color_primary
-.complimentary
-  :background $color_comp
+table
+  +table
