--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -12,5 +12,6 @@
 @import monsterstyle/theme/variables
 @import monsterstyle/theme/default
 @import monsterstyle/components/buttons
+@import monsterstyle/components/tables
 
 @import default
