--- a/source/stylesheets/monsterstyle/theme/variables.sass
+++ b/source/stylesheets/monsterstyle/theme/variables.sass
@@ -16,6 +16,8 @@ $font_family_serif      : Georgia, "Times New Roman", Times, serif
 $font_family_monospace  : Monaco, "Courier New", monospace
 $font_family_base       : $font_family_sans_serif
 
+$default_float : left
+
 $button_font_weight         : normal
 $button_font_size           : ms(0)
 $button_padding             : ms(-1)
@@ -23,3 +25,26 @@ $button_padding             : ms(-1)
 $button_default_color       : #333
 $button_default_bg          : #fff
 $button_default_border      : #ccc
+
+
+$table-bg               : $color_background
+$table-even-row-bg      : darken($color_background, 10%)
+
+$table-border-style     : solid
+$table-border-size      : 1px
+$table-border-color     : darken($color_background, 20%)
+
+$table-head-bg          : darken($color_background, 20%)
+$table-head-font-size   : ms(0)
+$table-head-font-color  : $color_text
+$table-head-font-weight : 700
+$table-head-padding     : ms(-2) ms(-2) ms(-1)
+
+$table-row-padding      : ms(-2) ms(-1)
+$table-row-font-size    : ms(-1)
+$table-row-font-color   : $color_text
+$table-line-height      : ms(1)
+
+$table-display          : table-cell
+$table-margin-bottom    : ms(2)
+
