--- a/source/basic_components/buttons.html.haml
+++ b/source/basic_components/buttons.html.haml
@@ -8,3 +8,7 @@
 %button.button{type: 'button'}
   Button
 %input.button{type: 'submit', value: 'Input Submit'}
+
+%pre.highlight
+  %code
+    <div class='testing'>Testing</div>
