--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -9,8 +9,9 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     %title= current_page.data.title || 'Monsterstyle'
+    <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">
     = stylesheet_link_tag 'normalize', 'all'
-  %body{ class: "#{page_classes}", ng:{app: 'app'} }
+  %body{ class: "#{page_classes}"}
     .container
       .wrapper
         .content_wrap
@@ -22,4 +23,5 @@
     <script src="//codeorigin.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+    <script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
     = javascript_include_tag  'all'
