--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -11,6 +11,7 @@
 
 @import monsterstyle/theme/variables
 @import monsterstyle/theme/default
+@import monsterstyle/components/forms
 @import monsterstyle/components/buttons
 @import monsterstyle/components/tables
 
