--- a/source/stylesheets/monsterstyle/theme/variables.sass
+++ b/source/stylesheets/monsterstyle/theme/variables.sass
@@ -11,6 +11,8 @@ $color_comp       : adjust-hue($color_primary, 180%)
 $ms-base: 16px
 $ms-ratio: $golden
 
+$global_radius: 2px
+
 $font_family_sans_serif : 'Open Sans', Helvetica, Arial, sans-serif
 $font_family_serif      : Georgia, "Times New Roman", Times, serif
 $font_family_monospace  : Monaco, "Courier New", monospace
@@ -27,24 +29,28 @@ $button_default_bg          : #fff
 $button_default_border      : #ccc
 
 
-$table-bg               : $color_background
-$table-even-row-bg      : darken($color_background, 10%)
+$table_bg               : $color_background
+$table_even_row_bg      : darken($color_background, 10%)
 
-$table-border-style     : solid
-$table-border-size      : 1px
-$table-border-color     : darken($color_background, 20%)
+$table_border_style     : solid
+$table_border_size      : 1px
+$table_border_color     : darken($color_background, 20%)
 
-$table-head-bg          : darken($color_background, 20%)
-$table-head-font-size   : ms(0)
-$table-head-font-color  : $color_text
-$table-head-font-weight : 700
-$table-head-padding     : ms(-2) ms(-2) ms(-1)
+$table_head_bg          : darken($color_background, 20%)
+$table_head_font_size   : ms(0)
+$table_head_font_color  : $color_text
+$table_head_font_weight : 700
+$table_head_padding     : ms(-2) ms(-2) ms(-1)
 
-$table-row-padding      : ms(-2) ms(-1)
-$table-row-font-size    : ms(-1)
-$table-row-font-color   : $color_text
-$table-line-height      : ms(1)
+$table_row_padding      : ms(-2) ms(-1)
+$table_row_font_size    : ms(-1)
+$table_row_font_color   : $color_text
+$table_line_height      : ms(1)
 
-$table-display          : table-cell
-$table-margin-bottom    : ms(2)
+$table_margin_bottom    : ms(2)
+
+$form_font_size : ms(0)
+$form_padding : 6px 7px
+$form_border : 1px solid darken($color_background, 40%)
+
 
