--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -48,6 +48,17 @@ input
 table
   +table
 
+.samples
+  :margin
+    :bottom 1rem
+  .preview, .code
+    :border solid 1px rgb(200,200,200)
+    :padding 1rem
+  .code
+    :background rgb(248, 248, 248)
+    :border
+      :top none
+
 = active_page
   :color rgb(255,255,255)
   :background rgb(200,0,0)
