--- a/source/basic_components/tables.html.haml
+++ b/source/basic_components/tables.html.haml
@@ -1,25 +1,14 @@
 .page_heading
   .page_title Tables
-%table
-  %thead
-    %tr
-      %th{width: "200"} Table Header
-      %th Table Header
-      %th{width: "150"} Table Header
-      %th{width: "150"} Table Header
-  %tbody
-    %tr
-      %td Content Goes Here
-      %td This is longer content Donec id elit non mi porta gravida at eget metus.
-      %td Content Goes Here
-      %td Content Goes Here
-    %tr
-      %td Content Goes Here
-      %td This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.
-      %td Content Goes Here
-      %td Content Goes Here
-    %tr
-      %td Content Goes Here
-      %td This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.
-      %td Content Goes Here
-      %td Content Goes Here
+
+.samples
+  .preview
+    = partial 'code/basic_table'
+  .code
+    %pre.highlight
+      %code
+        = h partial('code/basic_table')
+  .code
+    %pre.highlight
+      %code
+        = h partial('code/style_basic_table')
