--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -9,7 +9,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     %title= current_page.data.title || 'Monsterstyle'
-    <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">
+    <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/github.min.css">
     = stylesheet_link_tag 'normalize', 'all'
   %body{ class: "#{page_classes}"}
     .container
