form styling updates

--- a/source/stylesheets/monsterstyle/theme/variables.sass
+++ b/source/stylesheets/monsterstyle/theme/variables.sass
@@ -52,5 +52,5 @@ $table_margin_bottom    : ms(2)
 $form_font_size : ms(0)
 $form_padding : 6px 7px
 $form_border : 1px solid darken($color_background, 40%)
-
+$form_selector_font_size : ms(-0.5)
 
