--- a/source/stylesheets/monsterstyle/components/forms.sass
+++ b/source/stylesheets/monsterstyle/components/forms.sass
@@ -18,6 +18,7 @@
 
 = form_checkbox
   :display inline-block
+  :font-size $form_selector_font_size
 
 = form_textarea
   :outline none
@@ -33,8 +34,7 @@
     :right ms(-2)
     :top ms(-4)
   :display inline-block
-  :font-size $form_font_size
   input
     :margin 0
-
+    :font-size $form_selector_font_size
 
