--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -41,8 +41,10 @@
       :color rgb(0,0,0)
       :background rgb(220,220,220)
     &.active
-.button, a.button
-  +button($color_info)
+.basic_components_buttons_index
+  .button, a.button
+    +button($color_info)
+
 input
   :margin 0
 table
@@ -59,16 +61,39 @@ table
 .radio_button
   +form_radio_button
 
-.samples
-  :margin
-    :bottom 1rem
-  .preview, .code
-    :border solid 1px rgb(200,200,200)
-    :padding 1rem
-  .code
-    :background rgb(248, 248, 248)
-    :border
-      :top none
+.basic_components_tables_index
+  .samples
+    :margin
+      :bottom 1rem
+    .preview
+      :border solid 1px rgb(200,200,200)
+    .preview, .code
+      :padding 1rem
+    .codes
+      .toggle
+        :background rgb(230,230,230)
+        :padding 0.6rem
+        :border
+          :bottom solid 1px rgb(200,200,200)
+        .button
+          :cursor pointer
+          :display inline-block
+          :float left
+          :padding 0.6rem 1rem
+          :color rgb(100,100,100)
+          :font-weight 700
+          &:hover
+            :color rgb(60,60,60)
+          &.active
+            :color rgb(200,0,0)
+      :border solid 1px rgb(200,200,200)
+        :top none
+      :background rgb(248, 248, 248)
+      :position relative
+      .code
+        :background rgb(248, 248, 248)
+        :border
+          :top none
 
 = active_page
   :color rgb(255,255,255)
