don't show all codes

--- a/source/basic_components/tables.html.haml
+++ b/source/basic_components/tables.html.haml
@@ -10,7 +10,7 @@
       .button{data:{action:'sass'}} SASS
       .clear
     .clear
-    .code{data:{action:'html'}}
+    .code.active{data:{action:'html'}}
       %pre.highlight
         %code= h partial('code/basic_table')
     .code{data:{action:'sass'}}
