--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -96,6 +96,9 @@ table
         :background rgb(248, 248, 248)
         :border
           :top none
+        :display none
+        &.active
+          :display block
 
 = active_page
   :color rgb(255,255,255)
