nice header logo

--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -9,8 +9,24 @@
   .content
     :margin 0 6rem
 
+
+.header
+  :padding 1rem
+
+a.logo
+  .icon
+    :display inline-block
+    :width 24px
+    :height 24px
+    :background url(../images/logo.png) no-repeat
+  :color rgb(173,173,173)
+  span
+    :vertical-align middle
+  &:hover
+    :text-decoration none
+
 .page_heading
-  :padding 2rem 0
+  :padding 1rem 0
     :bottom 1.6rem
   :margin 1rem 0
   :text-align center
