--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -14,6 +14,10 @@
   %body{ class: "#{page_classes}"}
     .container
       .wrapper
+        .header
+          %a.logo{href: '#'}
+            %span.icon
+            %span MonsterStyle
         .content_wrap
           .content
             = yield
