--- a/source/complex_components/button_groups.html.haml
+++ b/source/complex_components/button_groups.html.haml
@@ -1,2 +1,12 @@
 .page_heading
   .page_title Button Groups
+.button_group
+  .button
+    Button
+  .button
+    Button
+  .button
+    Button
+  .button
+    Button
+
