--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -62,7 +62,8 @@ table
   +form_checkbox
 .radio_button
   +form_radio_button
-
+.button_group
+  +button_group
 .basic_components_tables_index
   .samples
     :margin
