--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -14,5 +14,6 @@
 @import monsterstyle/components/forms
 @import monsterstyle/components/buttons
 @import monsterstyle/components/tables
+@import monsterstyle/complex_components/button_groups
 
 @import default
