--- a/source/stylesheets/monsterstyle/theme/variables.sass
+++ b/source/stylesheets/monsterstyle/theme/variables.sass
@@ -54,3 +54,4 @@ $form_padding : 6px 7px
 $form_border : 1px solid darken($color_background, 40%)
 $form_selector_font_size : ms(-0.5)
 
+$button_group_radius : 3px
