--- a/source/stylesheets/monsterstyle/complex_components/button_groups.sass
+++ b/source/stylesheets/monsterstyle/complex_components/button_groups.sass
@@ -1,5 +1,5 @@
-= button_group
-  +button
+= button_group($color_theme)
+  +button($color_theme)
   &:first-child:not(:last-child)
     :padding
       :right 0 !important
