variables and mixin information for tables

--- a/source/basic_components/tables.html.haml
+++ b/source/basic_components/tables.html.haml
@@ -5,10 +5,97 @@
   %h3
     %span Variables
     %span.fa.fa-link
+
+
+%table.listing
+  %tr
+    %td.code $table_bg
+    %td.default 
+      %span $color_background
+    %td.desc table background color
+  %tr
+    %td.code $table_even_row_bg 
+    %td.default 
+      %span darken($color_background, 10%)
+    %td.desc every other row coloured
+  %tr
+    %td.code $table_border_style
+    %td.default 
+      %span solid
+    %td.desc border style
+  %tr
+    %td.code $table_border_size
+    %td.default 
+      %span 1px
+    %td.desc border size
+  %tr
+    %td.code $table_border_color
+    %td.default 
+      %span darken($color_background, 20%)
+    %td.desc border color
+  %tr
+    %td.code $table_head_bg
+    %td.default 
+      %span darken($color_background, 20%)
+    %td.desc table background color
+  %tr
+    %td.code $table_head_font_size
+    %td.default 
+      %span ms(0)
+    %td.desc table font size
+  %tr
+    %td.code $table_head_font_color
+    %td.default 
+      %span $color_text
+    %td.desc table font color
+  %tr
+    %td.code $table_head_font_weight
+    %td.default 
+      %span 700
+    %td.desc table font weight
+  %tr
+    %td.code $table_head_padding
+    %td.default 
+      %span ms(-2) ms(-2) ms(-1)
+    %td.desc table head padding
+  %tr
+    %td.code $table_row_padding
+    %td.default 
+      %span ms(-2) ms(-1)
+    %td.desc table row padding
+  %tr
+    %td.code $table_row_font_size
+    %td.default 
+      %span ms(-1)
+    %td.desc table row font size
+  %tr
+    %td.code $table_row_font_color
+    %td.default 
+      %span $color_text
+    %td.desc table row font color
+  %tr
+    %td.code $table_line_height
+    %td.default 
+      %span ms(1)
+    %td.desc table line height
+  %tr
+    %td.code $table_margin_bottom
+    %td.default
+      %span ms(2)
+    %td.desc table margin bottom
+
 %a.subtitle{href: '#mixins'}
   %h3
     %span Mixins
     %span.fa.fa-link
+
+%table.listing
+  %tr
+    %td.code table
+    %td.default
+      %span 24px
+    %td.desc applies default table styling
+
 %a.subtitle{href: '#examples'}
   %h3
     %span Examples
