--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -36,6 +36,7 @@ a.logo
     :font-weight 300
     :font-size 2.8rem
     :color rgb(100,100,100)
+
 a.subtitle
   :color rgb(100,100,100)
   :text-decoration none
@@ -54,3 +55,19 @@ a.subtitle
       :font-size 0.9rem
       :float right
       :color rgb(200,200,200)
+
+table.listing
+  td
+    :padding 0.2rem
+      :right 0.4rem
+  td.code
+    :color rgb(0,0,200)
+  td.default
+    span
+      :background rgb(230,230,230)
+      +border-radius(4px)
+      :padding 0.1rem 0.5rem
+      :font-size 0.8rem
+      :font-weight bold
+  td.desc
+    :color  rgb(100,100,100)
