Group Buttons Working!

--- a/source/complex_components/button_groups.html.haml
+++ b/source/complex_components/button_groups.html.haml
@@ -1,7 +1,7 @@
 .page_heading
   .page_title Button Groups
 .button_group
-  .button
+  .button.active
     Button
   .button
     Button
@@ -10,3 +10,10 @@
   .button
     Button
 
+%br
+
+.button_group
+  %a.button.active
+    Button
+  %a.button
+    Tricksy
