easy helper methods

--- a/source/basic_components/forms.html.haml
+++ b/source/basic_components/forms.html.haml
@@ -1,5 +1,24 @@
 .page_heading
   .page_title Forms
+
+%a.subtitle{href: '#variables'}
+  %h3
+    %span Variables
+    %span.fa.fa-link
+
+%a.subtitle{href: '#mixins'}
+  %h3
+    %span Mixins
+    %span.fa.fa-link
+
+%table.listing
+  %tr
+    %td.code table
+    %td.default
+      %span 24px
+    %td.desc applies default table styling
+
+
 .text_field
   .label
     Text Field
@@ -24,3 +43,4 @@
     One
   %input{type: 'radio'}
     Two
+
