--- a/source/stylesheets/_default.sass
+++ b/source/stylesheets/_default.sass
@@ -37,6 +37,9 @@ a.logo
     :font-size 2.8rem
     :color rgb(100,100,100)
 
+.example
+  :margin 2rem 0
+
 a.subtitle
   :color rgb(100,100,100)
   :text-decoration none
