--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -21,4 +21,5 @@
 @import code
 @import basic_components/tables
 @import basic_components/forms
+@import basic_components/buttons
 @import complex_components/button_groups
