--- a/source/_code.html.haml
+++ b/source/_code.html.haml
@@ -1,3 +1,3 @@
 .code{data:{action:"#{lang}"}}
   %pre.highlight
-    %code= h partial("codes/#{name}")
+    %code= h partial("codes/#{lang}/#{name}")
