--- a/source/_codes.html.haml
+++ b/source/_codes.html.haml
@@ -1,7 +1,7 @@
 .codes
   .toggle
     - names.each do |name|
-      .button{data:{action:"#{name}"}} name
+      .button{data:{action:"#{name}"}}= name
     .clear
   .clear
   = content
