--- a/source/stylesheets/basic_components/_buttons.sass
+++ b/source/stylesheets/basic_components/_buttons.sass
@@ -1,2 +1,4 @@
-.button
-  +button($primary_color)
+body.basic_components_buttons_index
+  .example
+    .button, a.button
+      +button($color_primary)
