--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -15,10 +15,15 @@
 @import monsterstyle/components/buttons
 @import monsterstyle/components/tables
 @import monsterstyle/complex_components/button_groups
+@import monsterstyle/complex_components/input_groups
+@import monsterstyle/complex_components/button_dropdowns
 
 @import default
 @import column
 @import code
 @import basic_components/tables
 @import basic_components/forms
+@import basic_components/buttons
 @import complex_components/button_groups
+@import complex_components/button_dropdown
+@import complex_components/input_groups
