--- a/source/stylesheets/monsterstyle/complex_components/button_groups.sass
+++ b/source/stylesheets/monsterstyle/complex_components/button_groups.sass
@@ -13,7 +13,7 @@
     :outline none
     :margin 0
     :line-height $button_font_size
-    //+border-radius(3px)
+    +border-radius(0px)
     :font-size $button_font_size
     :padding $button_padding
     :vertical-align middle
