--- a/source/basic_components/forms.html.haml
+++ b/source/basic_components/forms.html.haml
@@ -1,46 +1,26 @@
 .page_heading
   .page_title Forms
 
-%a.subtitle{href: '#variables'}
-  %h3
-    %span Variables
-    %span.fa.fa-link
+= section :variables do
+  = row '$form_font_size'         , 'ms(0)', 'form font size'
+  = row '$form_padding'           , '6px 7px', 'form padding'
+  = row '$form_border'            , '1px solid darken($color_background, 40%)', 'form border'
+  = row '$form_selector_font_size', 'ms(-0.5)', 'form selector font size'
 
-%a.subtitle{href: '#mixins'}
-  %h3
-    %span Mixins
-    %span.fa.fa-link
+= section :mixins do
+  = row 'form_field'         , nil, 'styling for the field that wraps the actual field input'
+  = row 'form_label'         , nil, 'styling for label'
+  = row 'form_text_field'    , nil, 'styling for input text'
+  = row 'form_password_field', nil, 'styling for input password'
+  = row 'form_checkbox'      , nil, 'styling for input checkbox'
+  = row 'form_textarea'      , nil, 'styling for textarea'
+  = row 'form_radio_button'  , nil, 'styling for radio button'
 
-%table.listing
-  %tr
-    %td.code table
-    %td.default
-      %span 24px
-    %td.desc applies default table styling
+= section :examples
 
+.example
+  = partial 'codes/html/forms'
 
-.text_field
-  .label
-    Text Field
-  %input{type: 'text'}
-  %button{type: 'button'}
-    Submit
-.textarea
-  .label
-    Text Area
-  %input{type: 'textarea'}
-.checkbox
-  .label
-    Checkboxes
-  %input{type: 'checkbox'}
-    Option 1
-  %input{type: 'checkbox'}
-    Option 2
-.radio_button
-  .label
-    Radio Buttons
-  %input{type: 'radio'}
-    One
-  %input{type: 'radio'}
-    Two
-
+= codes :html, :sass do
+  = code :html, :forms
+  = code :sass, :forms
