--- a/source/stylesheets/basic_components/_forms.sass
+++ b/source/stylesheets/basic_components/_forms.sass
@@ -1,17 +1,18 @@
 .basic_components_forms_index
-  input
-    :margin 0
-  .label
-    +form_label
-  .text_field
+  .example
     input
-      +form_text_field
-    button
-      +button($color_primary)
-  .textarea input
-    +form_textarea
-  .checkbox input
-    +form_checkbox
-  .radio_button
-    +form_radio_button
+      :margin 0
+    .label
+      +form_label
+    .text_field
+      input
+        +form_text_field
+      button
+        +button($color_primary)
+    .textarea input
+      +form_textarea
+    .checkbox input
+      +form_checkbox
+    .radio_button
+      +form_radio_button
 
