getting started pages

--- a/source/_column.html.haml
+++ b/source/_column.html.haml
@@ -1,7 +1,8 @@
 .column
   .group
     .title Getting Started
-    %a{href: '#'} Yee
+    %a.about{href: '/'} About
+    %a.install{href: '/getting_started/install'} How to Install
   .group
     .title Configuration
     %a.variables{href: '/configuration/variables/'} Variables
