--- a/source/stylesheets/_column.sass
+++ b/source/stylesheets/_column.sass
@@ -23,6 +23,10 @@
   :color rgb(255,255,255)
   :background rgb(200,0,0)
 
+body.index .column a.about
+  +active_page
+body.getting_started_install_index a.install
+  +active_page
 body.configuration_variables_index .column a.variables
   +active_page
 body.basic_components_forms_index .column a.forms
