search field styling

--- a/source/stylesheets/_column.sass
+++ b/source/stylesheets/_column.sass
@@ -44,6 +44,27 @@
     :display none
     &.active
       :display block
+  .section.search
+    .search_field
+      :background rgb(250,250,250)
+      :border
+        :left solid 1px rgb(240,240,240)
+      :position absolute
+      :top 51px
+      :left 0
+      :width 100%
+      .fa
+        :position absolute
+        :top 0.7rem
+        :left 0.8rem
+        :color rgb(100,100,100)
+      input
+        :outline none
+        :width 100%
+        :border none
+        :background none
+        :padding 0.6rem
+          :left 2.4rem
 = active_page
   :color rgb(255,255,255)
   :background rgb(200,0,0)
