--- a/source/complex_components/button_groups.html.haml
+++ b/source/complex_components/button_groups.html.haml
@@ -1,19 +1,17 @@
 .page_heading
   .page_title Button Groups
-.button_group
-  .button.active
-    Button
-  .button
-    Button
-  .button
-    Button
-  .button
-    Button
 
-.clear
+= section :variables do
+  = row 'button_group_radius', '3px', 'button group radius'
+= section :mixins do
+  = row 'button_group', '$color_theme', 'button group styling'
 
-.button_group
-  %a.button.active
-    Button
-  %a.button
-    Tricksy
+= section :examples
+
+.example
+  = partial 'codes/html/button_group'
+  .clear
+
+= codes :html, :sass do
+  = code :html, :button_group
+  = code :sass, :button_group
