--- a/source/stylesheets/monsterstyle/complex_components/input_groups.sass
+++ b/source/stylesheets/monsterstyle/complex_components/input_groups.sass
@@ -54,14 +54,54 @@
     :font-size $form_selector_font_size 
     :background-color $color_theme
     :float left
+    :padding 0 ms(-2)
+    +border-radius(0px)
+    &:first-child
+      :border-top-left-radius $button_group_radius
+      :border-bottom-left-radius $button_group_radius
+    &:not(:first-child):not(:last-child)
+      :border-radius 0px
+    &:last-child
+      :border-top-right-radius $button_group_radius
+      :border-bottom-right-radius $button_group_radius
     input
-      :height $input_group_height
-      :width ms(2)
-      &:first-child
-        :border-top-left-radius $button_group_radius
-        :border-bottom-left-radius $button_group_radius
-      &:not(:first-child):not(:last-child)
-        :border-radius 0px
-      &:last-child
-        :border-top-right-radius $button_group_radius
-        :border-bottom-right-radius $button_group_radius
+      :box-shadow none
+      :padding 0
+  .input_radio_group
+    :display inline-block
+    :font-size $form_selector_font_size 
+    :background-color $color_theme
+    :float left
+    :padding 0 ms(-2)
+    +border-radius(0px)
+    &:first-child
+      :border-top-left-radius $button_group_radius
+      :border-bottom-left-radius $button_group_radius
+    &:not(:first-child):not(:last-child)
+      :border-radius 0px
+    &:last-child
+      :border-top-right-radius $button_group_radius
+      :border-bottom-right-radius $button_group_radius
+    input
+      :box-shadow none
+  .input_selector_group_label
+    :display inline-block
+    :font-size $form_selector_font_size 
+    :background-color $color_theme
+    :float left
+    :height $input_group_height
+    :text-align right
+    :line-height $input_group_height
+    :vertical-align middle
+    :color contrast-color($color_theme, darken($color_theme, 45%), lighten($color_theme, 50%), 60%)
+    :padding 0 ms(-2)
+    +border-radius(0px)
+    &:first-child
+      :border-top-left-radius $button_group_radius
+      :border-bottom-left-radius $button_group_radius
+    &:not(:first-child):not(:last-child)
+      :border-radius 0px
+    &:last-child
+      :border-top-right-radius $button_group_radius
+      :border-bottom-right-radius $button_group_radius
+
